@@ -1,6 +1,12 @@
 # ChangeLog for sys-kernel/raspberrypi-image
-# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
+# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
+
+*raspberrypi-image-3.2.27_p20121105-r1 (12 Jul 2013)
+
+  12 Jul 2013; Michael Weber <xmw@gentoo.org>
+  +raspberrypi-image-3.2.27_p20121105-r1.ebuild:
+  Restrict binchecks and strip
 
 *raspberrypi-image-3.2.27_p20121105 (07 Nov 2012)
 
@@ -19,4 +25,3 @@
   18 Jun 2012; Michael Weber <xmw@gentoo.org>
   +rbpi-image-3.1.9_p20120617.ebuild, +metadata.xml:
   Initial import
-
